[package]
name = "numerous"
version = "0.1.0"
edition = "2021"
authors = ["Rian Fantozzi"]
description = "A set of tools to finding and classifying special numbers"
repository = "https://github.com/Penultimate-Panacea/numerous"
readme = "README.md"
license = "CC0-1.0"
keywords = ["math", "achilles", "integers"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = "2.3.0"
integer-sqrt = "0.1.5"
prime_factorization = "1.0.3"
